--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<?php
-
-
-?>
-
 
 
 <!DOCTYPE html>
@@ -36,10 +31,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <style>img[alt="www.000webhost.com"]{display:none;}</style>
 </head>
-    <!-- 
-I see u skided this website lol, so to not seem a dumbass,
-REMOVE THIS LINE ! 
--->
+
 
 <body>
     <!-- Page Preloder -->
@@ -62,9 +54,9 @@ REMOVE THIS LINE !
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.php">Homepage</a></li>
-                                    <li><a href="about-game.php">About Game   </a>
-                                    <li><a href="comments.php">Game Comments</a>
+                                <li class="active"><a href="./index.html">Homepage</a></li>
+                                    <li><a href="about-game.html">About Game   </a>
+                                    <li><a href="comments.html">Game Comments</a>
                                 <li><a
                                 href="#">Download<span class="arrow_carrot-down"></span></a>       <ul class="dropdown">
                                         <li><a href="https://cdn.discordapp.com/attachments/969909103621185536/972075116387254302/Golfie_Setup.zip">Windows</a></li>
