--- a/comments.html
+++ b/comments.html
@@ -1,8 +1,3 @@
-<?php
-
-?>
-
-
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -59,8 +54,8 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.php">Homepage</a></li>
-                                <li><a href="./about-game.php">About Game</a></li>
+                                <li><a href="./index.html">Homepage</a></li>
+                                <li><a href="./about-game.html">About Game</a></li>
                                 <li class="active"><a href="about-game">Game Comments   </a>
 
                                 <li><a
