Update and rename about-game.php to about-game.html

--- a/about-game.html
+++ b/about-game.html
@@ -1,5 +1,4 @@
-<?php
-?>
+
 
 
 <!DOCTYPE html>
@@ -58,9 +57,9 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.php">Homepage</a></li>
-                                    <li class="active"><a href="about-game.php">About Game   </a>
-                                    <li><a href="./comments.php">Game Comments</a></li>
+                                <li><a href="./index.html">Homepage</a></li>
+                                    <li class="active"><a href="about-game.html">About Game   </a>
+                                    <li><a href="./comments.html">Game Comments</a></li>
                                     <li><a
                                 href="#">Download<span class="arrow_carrot-down"></span></a>       <ul class="dropdown">
                                         <li><a href="https://cdn.discordapp.com/attachments/969909103621185536/972075116387254302/Golfie_Setup.zip">Windows</a></li>
